--- a/style/menu.css
+++ b/style/menu.css
@@ -3,16 +3,15 @@
 html, body {
     height: 100%;
     margin: 0;
-    /* overflow: hidden; */
 }
 
 body {
     font-family: 'Jockey One', sans-serif;
     position: relative;
     height: 100vh;
-    background-image: url('../media/wereld.jpeg'); /* Voeg hier de URL van je achtergrondafbeelding in */
-    background-size: cover; /* Zorg dat de afbeelding de volledige achtergrond vult */
-    background-position: center; /* Plaats de afbeelding in het midden */
+    background-image: url('../media/wereld.jpeg');
+    background-size: cover;
+    background-position: center;
 }
 
 .overlay {
@@ -21,8 +20,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparante zwarte laag */
-    z-index: -1; /* Tussen de video en de content */
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: -1;
 }
 
 .background-video {
@@ -33,12 +32,11 @@ body {
     height: 100%;
     object-fit: cover;
     z-index: -1;
-    background-image: url('achtergrond-afbeelding.jpg'); /* Als fallback de afbeelding */
+    background-image: url('achtergrond-afbeelding.jpg');
     background-size: cover;
     background-position: center;
 }
 
-/* Standaard stijlen */
 .regio-box {
     width: 100%;
     position: absolute;
@@ -54,16 +52,13 @@ body {
     height: auto;
     padding: 20px;
     display: flex;
-    flex-wrap: wrap; /* Sta toe dat items meerdere regels gebruiken */
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(2px);
     background-color: rgb(0, 35, 75);
     border-radius: 20px;
-    /* border: 3px solid rgba(210, 105, 0, 0.928); */
     border: 3px solid whitesmoke;
-    /* box-shadow: 0px 3px 18px 2px rgba(159, 159, 159, 0.208); */
-    /* box-shadow: 0px 3px 18px 2px orange; */
 }
 
 .region-link {
@@ -74,7 +69,7 @@ body {
     border-radius: 10px;
     padding: 10px;
     margin: 20px;
-    text-transform: uppercase; /* Optioneel: maak de tekst hoofdletters */
+    text-transform: uppercase;
     position: relative;
 }
 
@@ -106,31 +101,31 @@ body {
 /* Media query voor tablets */
 @media screen and (max-width: 768px) {
     .regio {
-        width: 60%; /* Breder op tablets */
+        width: 60%;
     }
 
     .region-link {
-        font-size: 20px; /* Kleinere tekst */
-        margin: 10px; /* Kleinere marge */
-        padding: 8px; /* Kleinere padding */
+        font-size: 20px;
+        margin: 10px;
+        padding: 8px;
     }
 }
 
 /* Media query voor mobiele telefoons */
 @media screen and (max-width: 480px) {
     .regio {
-        width: 80%; /* Nog breder op mobiele telefoons */
-        flex-direction: column; /* Plaats de regio-links onder elkaar */
-        padding: 10px; /* Minder padding */
+        width: 80%;
+        flex-direction: column;
+        padding: 10px;
     }
 
     .region-link {
-        font-size: 18px; /* Kleinere tekst */
-        margin: 5px; /* Kleinere marge */
-        padding: 5px; /* Kleinere padding */
+        font-size: 18px;
+        margin: 5px;
+        padding: 5px;
     }
 
     .region-link::after {
-        bottom: -3px; /* Pas de positie van de underline aan */
+        bottom: -3px;
     }
 }
