--- a/style/meldingen.css
+++ b/style/meldingen.css
@@ -14,38 +14,24 @@
     align-items: center;
     height: calc(100vh - 100px);
 }
-
+.regio-titel {
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+}
+h1 {
+    color: rgb(0, 35, 75);
+}
 .container-all {
     width: 100%;
     height: 70vh;
-    padding: 10px 20px 10px 0;
-    margin-right: 20px;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
 }
 
-.sidebar {
-    width: 15%;
-    height: 100%;
-    border-radius: 0 30px 30px 0;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: rgb(0, 35, 75);
-    box-shadow: 0px 3px 18px 2px rgba(0, 0, 0, 0.491);
-}
-
-.sidebar h1 {
-    margin-bottom: 15px;
-    color: whitesmoke;
-}
-
-.sidebar p {
-    margin: 10px 0;
-    color: whitesmoke;
-}
 
 .sidebar-btn {
     padding: 10px 15px;
@@ -54,12 +40,19 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: auto;
-    width: 100%;
+    
+    width: 10%;
+    position: absolute; /* Plaats de knop relatief aan de sidebar */
+    bottom: 20px; /* Zorg dat de knop 20px van de onderkant af staat */
+    left: 20px; /* Zorg dat de knop 20px van de linkerkant af staat */
+    z-index: 999;
 }
 
 .meldingen-box {
-    width: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
     display: flex;
     align-items: stretch;
     position: relative;
@@ -79,9 +72,13 @@
     flex: 1;
     padding: 20px;
     text-align: left;
+    overflow-y: auto;
 }
 
 .content-left h2, .content-left p,
 .content-right h2, .content-right p {
-    color: whitesmoke; /* Zorgt ervoor dat de tekst in deze elementen wit is */
+    color: whitesmoke;
+}
+.content-left p, .content-right p {
+    color: rgba(255, 255, 255, 0.626); /* Maak wit iets doorzichtig */
 }
