--- a/style/meldingen.css
+++ b/style/meldingen.css
@@ -95,3 +95,58 @@ h1 {
 .melding-count p {
     color: whitesmoke;
 }
+
+/* Popup styling */
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: #fff;
+    padding: 20px;
+    width: 50%;
+    border-radius: 5px;
+    text-align: center;
+    position: relative;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+/* Styling voor de vaste knop in content-left */
+.content-left {
+    position: relative;
+    overflow-y: auto;
+    max-height: 500px; /* Voeg een maximale hoogte toe voor scrollen */
+}
+
+.fixed-btn-container {
+    position: sticky;
+    bottom: 0;
+    right: 0;
+    text-align: right;
+    padding: 10px;
+}
+
+.popup-btn {
+    padding: 8px 16px;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
