--- a/style/meldingen.css
+++ b/style/meldingen.css
@@ -172,3 +172,21 @@ h1 {
 .btn-delete:hover {
     background-color: #c02b35;
 }
+
+.right-section {
+    width: 50%;
+    padding-left: 20px;
+    border-left: 2px solid rgba(255, 255, 255, 0.3);
+    overflow-y: auto;
+}
+.personeel-item {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 8px;
+    
+}
+
+.personeel-item p {
+    color: rgba(255, 255, 255, 0.626);
+}
