--- a/style/meldingen.css
+++ b/style/meldingen.css
@@ -137,7 +137,7 @@ textarea {
 button[type="submit"] {
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #28a745;
+    background-color: rgb(234, 99, 45);
     color: #000000;
     border: none;
     border-radius: 4px;
@@ -216,13 +216,13 @@ button[type="submit"] {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.374);
     justify-content: center;
     align-items: center;
 }
 
 .popup-content {
-    background-color: rgb(0, 0, 0);
+    background-color: #08244c;
     padding: 20px;
     border-radius: 5px;
     width: 300px;
